fixing detail size on small monitors
kinda

--- a/app/assets/stylesheets/new/popup.css.scss
+++ b/app/assets/stylesheets/new/popup.css.scss
@@ -25,7 +25,7 @@
   }
 
   .content.browser {
-    width: 85%;
+    width: 60%;
     margin: 1em auto 0;
     img {
       padding: 0.2em;
@@ -35,23 +35,33 @@
 
   .content.detail {
     margin: 3em auto 0;
-    width: 50%;
 
+    $detail-grid: (
+      container: 45em,
+      columns: 2,
+      gutters: 0.01,
+      math: fluid,
+    );
+
+
+    @include layout($detail-grid);
+    @include container;
 
      .card-image {
-       @include inline-block;
+       @include span(1 of 2);
        img { height: 450px; }
      }
 
      .info {
-       @include inline-block;
+       @include span(1 of 2 last);
        vertical-align: top;
        font-size: 18px;
-       padding-left: 2em;
+       // padding-left: 2em;
 
        h3 { margin-bottom: 0.1em; }
        table {
-         width: 100%; text-align: center;
+         // width: 100%;
+         text-align: center;
        }
      }
   }
